removed deleted routes endpoints
