# swagger.yaml
@@ -276,73 +276,6 @@ paths:
           description: A processing or an unexpected error.
           schema:
             $ref: '#/definitions/Error'
-  '/deleted-routes/{id}':
-    get:
-      security:
-        - company:
-          - routes.read
-      parameters:
-        - name: id
-          in: path
-          type: string
-          required: true
-          format: ISO-8601
-      summary: |
-        Returns a list of routes that were marked to be deleted before (excluding) specified date
-      responses:
-        '200':
-          description: An array of deleted routes
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/RouteOut'
-        '401':
-          description: Happens in case of non-existent oauth credentials.
-          schema:
-            $ref: '#/definitions/Error'
-        '403':
-          description: Happens in a case of insufficient permissions.
-          schema:
-            $ref: '#/definitions/Error'      
-        '400':
-          description: Happens when provided date is in wrong format.
-          schema:
-            $ref: '#/definitions/Error'
-        default:
-          description: A processing or an unexpected error.
-          schema:
-            $ref: '#/definitions/Error'
-    delete:
-      operationId: deleteDeletedRoutes
-      security:
-        - company:
-          - routes.write
-      parameters:
-        - name: id
-          in: path
-          type: string
-          required: true
-          format: ISO-8601
-      summary: Deleteing of routes is only allowed to the members of admin teams
-      responses:
-        '200':
-          description: Happens in case of peration was sucessful.
-        '401':
-          description: Happens in case of non-existent oauth credentials.
-          schema:
-            $ref: '#/definitions/Error'
-        '403':
-          description: Happens in a case of insufficient permissions.
-          schema:
-            $ref: '#/definitions/Error'
-        '400':
-          description: Happens when provided date is in wrong format.
-          schema:
-            $ref: '#/definitions/Error'
-        default:
-          description: A processing or an unexpected error.
-          schema:
-            $ref: '#/definitions/Error'
 definitions:
   RouteIn:
     required:
